2009-01-08  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/anjuta-symbol-db.glade:
	fixed #566699 – Default "Available API tags" for 
	Symbol Database preference tab.
	Added some tooltips to prefs page.

2009-01-08  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (goto_global_tree_iter):
	partially fixed #548910 – critials when clicking on the 
	global entry availabe in the global symbols tab

2009-01-07  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (goto_file_tag):
	* plugins/symbol-db/symbol-db-engine-core.c
	(sdb_engine_insert_dyn_query_node_by_id):
	fixed #566691 – Goto declaration nor goto definition work with macros

2009-01-07  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/symbol-db-engine-core.c
	(sdb_engine_dyn_child_query_node_destroy):
	small unref fix.

2009-01-06  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (on_editor_saved),
	(on_scan_end_manager):
	* plugins/symbol-db/symbol-db-engine-core.c
	(sdb_engine_scan_files_2), (sdb_engine_scan_files_1),
	(sdb_engine_init), (sdb_engine_add_new_db_file),
	(symbol_db_engine_add_new_files):
	* plugins/symbol-db/symbol-db-engine-core.h:
	* plugins/symbol-db/symbol-db-engine-priv.h:
	* plugins/symbol-db/symbol-db-engine-utils.c:
	#565981 – Don't use g_file_test()

2009-01-06  Jens Georg  <mail@jensge.org>

	* plugins/gtodo/libgtodo.c: 
  	#511589 - Remove unnecessary hack for GNOME-VFS which
  	is not needed for GIO/GVFS

2009-01-06  Jens Georg  <mail@jensge.org>

  	* plugins/profiler/Makefile.am
	* plugins/file-loader/Makefile.am
	* plugins/search/Makefile.am
	* plugins/class-gen/Makefile.am
	* plugins/project-import/Makefile.am
	* plugins/message-view/Makefile.am
	* plugins/macro/Makefile.am
	* plugins/file-wizard/Makefile.am
	#511589 – Remove dependency on gnome-vfs from Makefiles

2009-01-06  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/cvs-plugin/Makefile.am:
	* plugins/subversion/Makefile.am: