@@ -2,8 +2,8 @@
 <ui>
 	<popup name="PopupDocumentManager">
 		<menu name="Goto" action="ActionMenuGoto">
-			<menuitem name="TagDef" action="ActionSymbolDBGotoDef" />
 			<menuitem name="TagDecl" action="ActionSymbolDBGotoDecl" />
+			<menuitem name="TagImpl" action="ActionSymbolDBGotoImpl" />
 		</menu>
 	</popup>
 </ui>
