@@ -1,5 +1,14 @@
 2009-01-08  Massimo Cora'  <mcora@svn.gnome.org>
 
+	* plugins/symbol-db/anjuta-symbol-db-plugin.ui:
+	* plugins/symbol-db/plugin.c (goto_file_tag),
+	(on_goto_file_tag_impl_activate):
+	#567049 – Goto Definition fails for symbols ending in a digit.
+	Renamed Goto Definition -> Goto Implementation. Before it was too
+	confusing.
+
+2009-01-08  Massimo Cora'  <mcora@svn.gnome.org>
+
 	* plugins/symbol-db/anjuta-symbol-db.glade:
 	fixed #566699 – Default "Available API tags" for 
 	Symbol Database preference tab.
